--- a/app/views/home/error_500.html.erb
+++ b/app/views/home/error_500.html.erb
@@ -24,7 +24,7 @@
                         </div>
                         <div class="fr-col-12 fr-col-md-3 fr-col-offset-md-1 fr-px-6w fr-px-md-0">
                             
-                            <%= image_tag "technical-error.svg", class: "fr-responsive-img fr-artwork", height: '200', width: '160' %>
+                            <%= image_tag "technical-error.svg", class: "fr-responsive-img fr-artwork", height: '200', width: '160', alt: "" %>
                               
                         </div>
                     </div>
