--- a/app/views/home/mentions_legales.html.erb
+++ b/app/views/home/mentions_legales.html.erb
@@ -7,37 +7,41 @@
 				<section class="fr-pb-6v">
 				
 				<p class="fr-mt-4v fr-mb-0">
-					Ce site est édité par la Direction du Budget au sein du Ministère de l'Économie, des finances et de la relance. 
+					Ce site est édité par l’équipe BudgetLab, au sein de la Direction du Budget, un service du Ministère de l’Economie, des Finances et de la Souveraineté Industrielle et Numérique.
 				</p>
-				<p class="fr-mt-4v fr-mb-0">Les mentions légales ont été établies le 16 Juillet 2022. Elles ont été mises à jour le 16 Juillet 2022.</p>
+				<p class="fr-mt-4v fr-mb-0">Direction du Buget</p>
+				<p class="fr-mt-2v fr-mb-0">139 rue de Bercy</p>
+				<p class="fr-mt-2v fr-mb-0">75572 Paris Cedex 12</p>
+				<p class="fr-mt-2v fr-mb-0">Tel Accueil : 01 40 04 04 04</p>
+				<p class="fr-mt-4v fr-mb-0">Les mentions légales ont été établies le 5 août 2022.</p>
 				</section>
 				<section class="fr-py-6v">
 				<h2 class="fr-h2">Directrice de publication</h2>
-				<p class="fr-mt-4v fr-mb-0">Mme Mélanie Joder - Directrice du Budget</p>
+				<p class="fr-mt-4v fr-mb-0">La directrice de la Direction du Budget : Mélanie Joder</p>
 
 				</section>
 				<section class="fr-py-6v">
 				<h2 class="fr-h2">Conception et gestion du site</h2>
-				<p class="fr-mt-4v fr-mb-0">Ce site est conçu et développé par l’équipe de la Direction du Budget et utilise le système de design de l’État.</p>
+				<p class="fr-mt-4v fr-mb-0">Ce site est conçu et développé par les équipes 2PERF et BudgetLab et utilise le <a href="https://www.systeme-de-design.gouv.fr/" target="_blank">système de design de l’État</a>.</p>
 
 				</section>
 				<section class="fr-py-6v">
 				<h2 class="fr-h2">Code source du site</h2>
-				<p class="fr-mt-4v fr-mb-0">Le code source du site est disponible sur Github.</p>
+				<p class="fr-mt-4v fr-mb-0">Le code source du site est disponible sur <a href="https://github.com/aleschi/datason" target="_blank">Github</a>.</p>
 				</section>
 				<section class="fr-py-6v">
 				<h2 class="fr-h2">Propriété intellectuelle et liens</h2>
-				<p class="fr-mt-4v fr-mb-0">Tout site public ou privé est autorisé à établir, sans autorisation préalable, un lien vers les informations diffusées sur budgetlab.gouv.fr/simp3.</p>
+				<p class="fr-mt-4v fr-mb-0">Tout site public ou privé est autorisé à établir, sans autorisation préalable, un lien vers les informations diffusées sur budgetlab.finances.gouv.fr/simp3.</p>
 				<p class="fr-mt-4v fr-mb-0">Sauf mention de propriété intellectuelle détenue par des tiers, les contenus de ce site sont proposés sous licence ouverte 2.0.</p>
-				<p class="fr-mt-4v fr-mb-0">La mise en place de liens vers nos contenus et documents est cependant est à privilégier par rapport à la reproduction sur un site tiers. La mention explicite du site source budgetlab.gouv.fr/simp3 est recommandée.</p>
+				<p class="fr-mt-4v fr-mb-0">La mise en place de liens vers nos contenus et documents est cependant est à privilégier par rapport à la reproduction sur un site tiers. </p>
 				</section>
 				<section class="fr-py-6v">
 				<h2 class="fr-h2">Hébergement </h2>
 				<p class="fr-mt-4v fr-mb-0">Google Cloud Platform - Google France</p>
 				<p class="fr-mt-4v fr-mb-0">Fournisseur de Cloud public (CSP) Google dans le cadre du marché UGAP C3</p>
-				<p class="fr-mt-4v fr-mb-0">
-					8, rue de Londres, 75009 Paris France
-					01 42 68 53 00
+				<p class="fr-mt-4v fr-mb-0">8, rue de Londres</p>
+				<p class="fr-mt-2v fr-mb-0"> 75009 Paris France</p>
+				<p class="fr-mt-2v fr-mb-0">	01 42 68 53 00</p>
 				</p>
 
 				</section>
