--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,6 +30,9 @@
         </div>
         <div class="fr-footer__bottom">
             <ul class="fr-footer__bottom-list">
+                 <li class="fr-footer__bottom-item">
+                    <%= link_to plan_du_site_path, class:"fr-footer__bottom-link" do%>Plan du site<%end%>
+                </li>
                 <li class="fr-footer__bottom-item">
                     <%= link_to accessibilite_path, class:"fr-footer__bottom-link" do%>Accessibilité: partiellement conforme<%end%>
                 </li>
