--- a/app/views/home/accessibilite.html.erb
+++ b/app/views/home/accessibilite.html.erb
@@ -4,58 +4,56 @@
 	<div class="fr-col-12 fr-col-md-8">
 		  		<h1>Déclaration d'accessibilité</h1>
 		  	
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<p class="fr-mt-4v fr-mb-0">La Direction du Budget s’engage à rendre ses sites internet, intranet, extranet et ses progiciels accessibles (et ses applications mobiles et mobilier urbain numérique) conformément à l’article 47 de la loi n°2005-102 du 11 février 2005.</p>
 
-					<p class="fr-mt-4v fr-mb-0">Cette déclaration d’accessibilité s’applique à SIMP3.</p>
+					<p class="fr-mt-4v fr-mb-0">Cette déclaration d’accessibilité s’applique à SIMP3 (budgetlab.finances.gouv.fr/simp3).</p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h2 class="fr-h2">État de conformité</h2>
 					<p class="fr-mt-4v fr-mb-0">SIMP3 est partiellement conforme avec le référentiel général d’amélioration de l’accessibilité (RGAA), version 4 en raison des non-conformités et des dérogations énumérées ci-dessous. </p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h3 class="fr-h3">Résultats des tests</h3>
-					<p class="fr-mt-4v fr-mb-0">L’audit de conformité réalisé par [nom de l’entité qui a réalisé l’audit] révèle que : </p>
-					<p class="fr-mt-4v fr-mb-0">60% des critères du RGAA version 4 sont respectés ; </p>
+					<p class="fr-mt-4v fr-mb-0">L’audit de conformité réalisé par La direction du Budget révèle que : </p>
+					<p class="fr-mt-4v fr-mb-0"><ul><li>80% des critères du RGAA version 4 sont respectés ; </li></ul></p>
 				</section>
-				<section class="fr-py-6v">
-					<h2 class="fr-h2">Contenus non accessibles</h2>			
-					<p class="fr-mt-4v fr-mb-0">A lister</p>
+				<section class="fr-pb-6v">
+					<h2 class="fr-h2">Contenus non accessibles</h2>	
+					<h3 class="fr-h3">Non conformités</h3>		
+					<p class="fr-mt-4v fr-mb-0"><ul><li>Le graphique de la page suivi temporel peut présenter des couleurs non accessibles.</li><li>Certaines fonctionnalités de la cartographie réalisée avec l’aide de Google Maps peuvent être inaccessibles.</li></ul></p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h2 class="fr-h2">Établissement de cette déclaration d’accessibilité</h2>			
-					<p class="fr-mt-4v fr-mb-0">Cette déclaration a été établie le 16 juillet 2022. Elle a été mise à jour le 29 juillet 2022</p>
+					<p class="fr-mt-4v fr-mb-0">Cette déclaration a été établie le 5 août 2022.</p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h3 class="fr-h3">Technologies utilisées pour la réalisation l’audit</h3>
 					
-					<p class="fr-mt-4v fr-mb-0">- HTML5</p>
-					<p class="fr-mt-4v fr-mb-0">- SCSS</p>
+					<p class="fr-mt-4v fr-mb-0"><ul><li>HTML5</li><li>CSS</li><li>Wave Evaluation tool</li></ul></p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h3 class="fr-h3">Environnement de test</h3>
 					<p class="fr-mt-4v fr-mb-0">Les vérifications de restitution de contenus ont été réalisées sur la base de la combinaison fournie par la base de référence du RGAA, avec les versions suivantes :</p>
-					<p class="fr-mt-4v fr-mb-0">- Firefox et NVDA</p>
-					<p class="fr-mt-4v fr-mb-0">- Safari et VoiceOver</p>
+					<p class="fr-mt-4v fr-mb-0"><ul> <li>Google Chrome</li></ul></p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h3 class="fr-h3">Outils pour évaluer l’accessibilité</h3>
-					<p class="fr-mt-4v fr-mb-0">A Lister</p>
+					<p class="fr-mt-4v fr-mb-0"><ul> <li>color contrast analyzer</li><li>inspecteur de code</li><li>extension google "Wave evaluation tool"</li></ul></p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h3 class="fr-h3">Pages du site ayant fait l’objet de la vérification de conformité</h3>
-					<p class="fr-mt-4v fr-mb-0">A lister</p>
+					<p class="fr-mt-4v fr-mb-0"><ul> <li>page d’accueil : budgetlab.finances.gouv.fr/simp3</li><li>page Cartographie de la performance : budgetlab.finances.gouv.fr/simp3/cartographie_performance</li><li>page Cartographie par indicateur : budgetlab.finances.gouv.fr/simp3/cartographie_indicateur</li><li>page Suivi temporel des indicateurs : budgetlab.finances.gouv.fr/simp3/indicateur_executions</li><li>page Liste des indicateurs : budgetlab.finances.gouv.fr/simp3/indicateurs</li><li>page Liste des services exécutants : budgetlab.finances.gouv.fr/simp3/service_executants</li></ul></p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 					<h2 class="fr-h2">Retour d’information et contact</h2>
 			
 					<p class="fr-mt-4v fr-mb-0">
-					Si vous n’arrivez pas à accéder à un contenu ou à un service, vous pouvez contacter le responsable SIMP3 pour être orienté vers une alternative accessible ou obtenir le contenu sous une autre forme.</p>
+					Si vous n’arrivez pas à accéder à un contenu ou à un service, vous pouvez contacter les responsables SIMP3 pour être orienté vers une alternative accessible ou obtenir le contenu sous une autre forme.</p>
 
-					<p class="fr-mt-4v fr-mb-0">E-mail : budgetlab@finances.gouv.fr</p>
-					<p class="fr-mt-4v fr-mb-0">Adresse : 139 rue de Bercy, 75012 PARIS</p>
+					<p class="fr-mt-4v fr-mb-0"><ul><li>Envoyer un mail à l’adresse : budget.lab@finances.gouv.fr</li><li>Contacter BudgetLab : Ministère de l’Economie, des Finances et de la Souveraineté Industrielle et Numérique, 139 rue de Bercy, 75012 PARIS.</li></ul></p>
 				</section>
-				<section class="fr-py-6v">
+				<section class="fr-pb-6v">
 				<h2 class="fr-h2">Voie de recours</h2>
 
 				<p class="fr-mt-4v fr-mb-0">
@@ -64,17 +62,18 @@
 				<p class="fr-mt-4v fr-mb-0">Plusieurs moyens sont à votre disposition :</p>
 
 				<p class="fr-mt-4v fr-mb-0">	
-					- <a target="_blank" rel="noopener" href="https://formulaire.defenseurdesdroits.fr/" title="Écrire un message au Défenseur des droits - nouvelle fenêtre">Écrire un message au Défenseur des droits</a>
-				</p>
-				<p class="fr-mt-4v fr-mb-0">
-					- <a target="_blank" rel="noopener" href="https://www.defenseurdesdroits.fr/saisir/delegues" title="Contacter le délégué du Défenseur des droits dans votre région - nouvelle fenêtre">Contacter le délégué du Défenseur des droits dans votre région</a>
-				</p>
-				<p class="fr-mt-4v fr-mb-0">
-					- Envoyer un courrier par la poste (gratuit, ne pas mettre de timbre) :
+					<ul> <li><a target="_blank" rel="noopener" href="https://formulaire.defenseurdesdroits.fr/" title="Écrire un message au Défenseur des droits - nouvelle fenêtre">Écrire un message au Défenseur des droits</a></li>
+				
+					<li><a target="_blank" rel="noopener" href="https://www.defenseurdesdroits.fr/saisir/delegues" title="Contacter le délégué du Défenseur des droits dans votre région - nouvelle fenêtre">Contacter le délégué du Défenseur des droits dans votre région</a>
+					</li>
+					<li>
+					Envoyer un courrier par la poste (gratuit, ne pas mettre de timbre) :
 					Défenseur des droits
 					Libre réponse 71120 75342 Paris CEDEX 07
+		  			</li>
+		  			</ul>
 		  		</p>
-		  		<p class="fr-mt-4v fr-mb-0">Cette déclaration d’accessibilité a été créée le 16 mars 2022 grâce au <a target="_blank" rel="noopener" href="https://betagouv.github.io/a11y-generateur-declaration/#create" title="Accéder au générateur de Déclaration d’Accessibilité de BetaGouv - nouvelle fenêtre"> Générateur de Déclaration d’Accessibilité de BetaGouv</a>.</p>
+		  		
 		  		</section>
 	</div>
 </div>
