change google map react

--- a/app/views/home/mentions_legales.html.erb
+++ b/app/views/home/mentions_legales.html.erb
@@ -27,7 +27,7 @@
 				</section>
 				<section class="fr-py-6v">
 				<h2 class="fr-h2">Code source du site</h2>
-				<p class="fr-mt-4v fr-mb-0">Le code source du site est disponible sur <a href="https://github.com/aleschi/datason" target="_blank">Github</a>.</p>
+				<p class="fr-mt-4v fr-mb-0">Le code source du site est disponible sur <a href="https://github.com/aleschi/simp3" target="_blank">Github</a>.</p>
 				</section>
 				<section class="fr-py-6v">
 				<h2 class="fr-h2">Propriété intellectuelle et liens</h2>
